<resources>
    <string name="app_name">Talks</string>
    <string name="all">All</string>
    <string name="followed">Followed</string>
    <string name="followers">Followers</string>
    <string name="error">An error occurred. Try again later.</string>
    <string name="wrongcred">Invalid Email or Password</string>
    <string name="missingmail">Please enter your email address</string>
    <string name="missingpassword">Please enter your password</string>
    <string name="welcome">Welcome back</string>
    <string name="signIn">Sign in to join and share</string>
    <string name="or">or</string>
    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="errLogin">Something went wrong. Please check your credentials and try again</string>
    <string name="insmail">Enter your email address</string>
    <string name="inspw">Enter your password</string>
    <string name="yourposts">Your Posts</string>
    <string name="saved">Saved</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="errLoading">An error occurred while loading the information</string>
    <string name="errUserNF">Error loading user.\nThis account may no longer be available</string>
    <string name="createAccount">Create account</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="dob">Date of birth</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="back">Back</string>
    <string name="errMissingName">Missing name</string>
    <string name="errMissingSurname">Missing surname</string>
    <string name="errMissingUsername">Missing username</string>
    <string name="errMissingDOB">Missing date of birth</string>
    <string name="errMissingMail">Missing email address</string>
    <string name="errMissingPw">Missing password</string>
    <string name="errPWLEN">Password must be at least 8 characters long</string>
    <string name="errPWLC">Password must contain at least one uppercase letter</string>
    <string name="errPWUC">Password must contain at least one lowercase letter</string>
    <string name="errPWSYM">Password must contain at least one special character</string>
    <string name="errPWNUM">Password must contain at least one number</string>
    <string name="errPWREP">Passwords do not match</string>
    <string name="errMailNV">Invalid email address</string>
    <string name="errNameNL">Name can only contain letters</string>
    <string name="errSurnameNL">Surname can only contain letters</string>
    <string name="succReg">Registration successful</string>
    <string name="errDBReg">Email address already in use</string>
    <string name="errExUsername">Username already taken</string>
    <string name="errInvalidUsername">Username can only contain letters and numbers</string>
    <string name="datesel">Select date</string>
    <string name="errinvalidDate">Selected date is not valid</string>
    <string name="errReg">An error occurred while creating the profile.\nPlease log in and try again</string>
    <string name="title">Title</string>
    <string name="postText">Post</string>
    <string name="source">Source (optional)</string>
    <string name="loadImage">Load image</string>
    <string name="uploadPost">Post</string>
    <string name="errMissingTitleOrText">Please enter a title and some content for your post</string>
    <string name="addImg">Add image</string>
    <string name="changeImg">Change image</string>
    <string name="postNF">Post not found</string>
    <string name="editpost">Edit Post</string>
    <string name="addcomment">Add a reply</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="nonotif">No notifications</string>
    <string name="notifcomment"><b>%1$s</b>  commented on your post</string>
    <string name="notiffw"><b>%1$s</b>  started following you</string>
    <string name="notiftag"><b>%1$s</b> mentioned you</string>
    <string name="sendcommdesc">Button to send a comment</string>
    <string name="errComm">Please enter some text</string>
    <string name="noYourPosts">No posts</string>
    <string name="savedposts">Saved posts</string>
    <string name="noposts">No saved posts</string>
    <string name="emptyhomepage">Nothing to see here yet.\nBe the first to post something!</string>
    <string name="emptysearch">No results for this search</string>
    <string name="notifnotlogged">Log in to see your notifications</string>
    <string name="errReLog">An error occurred, please log in and try again</string>
    <string name="errImg">An error occurred while adding the image</string>
    <string name="errImgRem">An error occurred while removing the image</string>
    <string name="errImgEdit">An error occurred while updating the image</string>
    <string name="errImgAdd">An error occurred while adding the image</string>
    <string name="errUserSearch">An error occurred while searching for the user</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="cont">Continue</string>
    <string name="selimg">Select a profile picture</string>
    <string name="prpic">Profile picture</string>
    <string name="pref">Preferences</string>
    <string name="newpost">New post</string>
    <string name="cp">Post</string>
    <string name="save">Save</string>
    <string name="errAccount">An error occurred.\nPlease log in again and try again.</string>
    <string name="errTag">An error occurred while adding tags</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="postDel">Delete post</string>
    <string name="postDQ">Are you sure you want to delete the post?</string>
    <string name="errPostDel">Failed to delete the post</string>
    <string name="errpostnf">Post not found. It may have been deleted.</string>
    <string name="posteditcomp">Post updated successfully</string>
    <string name="saved_sing">Saved</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="errcommloading">Error loading comments</string>
    <string name="errNotif">Unable to send notification</string>
    <string name="errEmptyPrPic">Select a profile picture</string>
</resources>