<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:background="@color/background"
                android:text="@string/welcome"
                android:textColor="@color/text"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/settingsBtn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/settings"
                app:tint="@color/lime"
                android:scaleType="fitCenter"
                />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/background"
                android:text="@string/signIn"
                android:textColor="@color/text"
                android:textSize="18sp"
                android:layout_marginStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/background"
                android:text="@string/or"
                android:textColor="@color/text"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginBtn" />




            <LinearLayout
                android:id="@+id/loginBtn"
                android:layout_width="200dp"
                android:layout_height="55dp"
                android:layout_marginTop="45dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/buttonbgyellow"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/pwLL"
                >
                <TextView
                    android:id="@+id/loginBtn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"/>
            </LinearLayout>



            <LinearLayout
                android:id="@+id/register"
                android:layout_width="200dp"
                android:layout_height="55dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                android:layout_marginTop="25dp"
                android:background="@drawable/buttonbggrey"
                android:gravity="center"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView8"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/emailLL"
                android:layout_width="336dp"
                android:layout_height="50dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/switchbg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/blockbg"
                    android:hint="@string/insmail"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pwLL"
                android:layout_width="336dp"
                android:layout_height="50dp"
                android:background="@drawable/switchbg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailLL"
                android:layout_marginTop="45dp">

                <EditText
                    android:id="@+id/pwET"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:backgroundTint="@color/blockbg"
                    android:hint="@string/inspw"
                    android:inputType="textPassword"
                    android:textColor="@color/text"
                    android:textColorHint="@color/hint" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>